--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -454,3 +454,8 @@ footer .footer-below {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
 }
+
+/* banner image */
+.img-banner{
+    width: 100%   
+}
