--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -464,3 +464,10 @@ footer .footer-below {
     nav > .container{
         width: 1170px;
 }   
+    
+nav > .container{
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
