--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">{{ site.meta_author }}</a>
+                <a class="navbar-brand" href="#page-top">Ling Qian</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
