--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -471,3 +471,13 @@ nav > .container, footer .container, section .container {
     padding-left: 15px;
     padding-right: 15px;
 }
+    
+/* portfolio */
+.portfolio-item {
+    max-height: 260px;
+    overflow: hidden;
+}
+
+.portfolio-link {
+    max-height: 260px;
+}
