--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive img-banner" src="img/profile.jpeg" alt="">
                     <div class="intro-text">
-                        <span class="name">{{ site.skills }}</span>
+                        <span class="skills">{{ site.skills }}</span>
                         <hr class="star-light">
                         <div class="row">
                             <div class="col-lg-4 col-lg-offset-2">
