move about to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive img-banner" src="img/profile.jpeg" alt="">
                     <div class="intro-text">
-                        <span class="skills">{{ site.skills }}</span>
+                        <span class="name">Ling Qian</span>
                         <hr class="star-light">
-                        <div class="row">
-                            <div class="col-lg-4 col-lg-offset-2">
-                                <p>My goal is to become an excellent Instructional Technology Consultant in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching.</p>
-                            </div>
-                            <div class="col-lg-4">
-                                <p>I have extensive knowledge and eight years of experiences about Instructional Design, adult learning, and cutting-edge learning technologies. Please feel free to contact me if you have any questions about my portfolio.</p>
-                            </div>
-                        </div>
+                        <span class="skills">{{ site.skills }}</span>
                     </div>
                 </div>
             </div>
