--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -4,5 +4,16 @@ test: test
 
 <!-- Documents Section -->
 <section class="success" id="about">
-    {{ page.test }}
+    <h1>{{ page.test }}</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>My Vision</h2>
+                <hr class="star-light">
+            </div>
+        </div>
+        <div class="row">
+           
+        </div>
+    </div>
 </section>
