--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% include header.html %}
     {% include portfolio_grid.html %}
     {% include vision.html %}
+    {% include documents.html %}
 
     {% if site.contact == "static" %}
         {% include contact_static.html %}
