--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -1,10 +1,10 @@
 <!-- Documents Section -->
-<section class="success" id="about">
+<section id="about">
     <h1>{{ page.test }}</h1>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>My Vision</h2>
+                <h2>Documents</h2>
                 <hr class="star-light">
             </div>
         </div>
