fix section layout/backgrounds

--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -1,5 +1,5 @@
 <!-- Documents Section -->
-<section id="about">
+<section id="documents">
     <h1>{{ page.test }}</h1>
     <div class="container">
         <div class="row">
