--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -484,5 +484,6 @@ nav > .container, footer .container, section .container {
 
 section:nth-child(even) {
     background-color: #{{ site.color.primary }}
+    color: #fff;
 }
 }
