--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -9,7 +9,12 @@
             </div>
         </div>
         <div class="row">
-           
+            <div class='col-lg-offset-2'>
+                <button class="btn btn-success btn-lg">Download</button>
+            </div>
+            <div>
+                <button class="btn btn-success btn-lg">Download</button>
+            </div>
         </div>
     </div>
 </section>
