--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -9,10 +9,10 @@
             </div>
         </div>
         <div class="row">
-            <div class='col-lg-offset-2'>
+            <div class="col-lg-4 col-lg-offset-2">
                 <button class="btn btn-success btn-lg">Download</button>
             </div>
-            <div>
+            <div class="col-lg-4">
                 <button class="btn btn-success btn-lg">Download</button>
             </div>
         </div>
