--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -10,9 +10,11 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
+                Resume
                 <button class="btn btn-success btn-lg">Download</button>
             </div>
             <div class="col-lg-4">
+                CV
                 <button class="btn btn-success btn-lg">Download</button>
             </div>
         </div>
