--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,10 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">Vision</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#documents">Documents</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
