--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -14,6 +14,7 @@
                         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
+                                    caption
                                     <i class="fa fa-search-plus fa-3x"></i>
                                 </div>
                             </div>
