--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -14,8 +14,7 @@
                         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    caption
-                                    <i class="fa fa-search-plus fa-3x"></i>
+                                    {{ post.caption }}
                                 </div>
                             </div>
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
