edit project caption

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -493,3 +493,8 @@ section:nth-child(even) {
     background-color: #{{ site.color.primary }};
     color: #fff;
 }
+
+/* projects */
+.caption-content .fa {
+    display: block;
+}
