--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -15,6 +15,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     {{ post.caption }}
+                                    <i class="fa fa-plus-circle fa-3x"></i>
                                 </div>
                             </div>
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
