--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -226,14 +226,15 @@ section.success {
     top: 50%;
     width: 100%;
     height: 20px;
-    margin-top: -12px;
+    /*margin-top: -12px;*/
+    transform: translate(0, -50%);
     text-align: center;
     font-size: 20px;
     color: #fff;
 }
 
 #projects .portfolio-item .portfolio-link .caption .caption-content i {
-    margin-top: -12px;
+    /*margin-top: -12px;*/
 }
 
 #projects .portfolio-item .portfolio-link .caption .caption-content h3,
