--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -9,13 +9,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-lg-offset-2">
-                Resume
-                <button class="btn btn-success btn-lg">Download</button>
+            <div class="col-md-4 col-md-offset-2">
+                <h3 class="text-center">Resume</h3>
+                <a href="/documents/resume.pdf" target="_blank"><img src="/documents/resume.jpg"/></a>
+                <a href="/documents/resume.pdf" download><button class="btn btn-success btn-lg">Download</button></a>
             </div>
-            <div class="col-lg-4">
-                CV
-                <button class="btn btn-success btn-lg">Download</button>
+            <div class="col-md-4">
+                <h3 class="text-center">CV</h3>
+                <a href="/documents/cv.pdf" target="_blank"><img src="/documents/cv.jpg"/></a>
+                <a href="/documents/cv.pdf" download><button class="btn btn-success btn-lg">Download</button></a>
             </div>
         </div>
     </div>
