--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive img-banner" src="img/profile.jpeg" alt="">
+                <div id="banner">
+                    <img class="img-responsive img-banner" src="img/profile1.jpg" alt="Ling Qian Portfolio Image">
+                    <div class="quote">
+                        I strive for two things in design: simplicity and clarity.
+                        <span class="author">Lindon Leader</span>
+                    </div>
+                </div>
                 <div class="intro-text">
                     <span class="name">Ling Qian</span>
                     <hr class="star-light">
