--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,10 +22,13 @@
                         <a href="#projects">Projects</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Vision</a>
+                        <a href="#vision">Vision</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#documents">Documents</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
