--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,7 +17,7 @@
                                     {{ post.caption }}
                                 </div>
                             </div>
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+                            <img src="img/projects/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
                         </a>
                     </div>
                 {% endfor %}
