--- a/_includes/vision.html
+++ b/_includes/vision.html
@@ -1,5 +1,5 @@
- <!-- About Section -->
-<section id="about">
+ <!-- Vision Section -->
+<section id="vision">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
