--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     {% include projects.html %}
     {% include vision.html %}
     {% include documents.html %}
+    {% include about.html %}
 
     {% if site.contact == "static" %}
         {% include contact_static.html %}
