change profile photo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <div id="banner">
-                    <img class="img-responsive img-banner" src="img/profile1.jpg" alt="Ling Qian Portfolio Image">
+                    <img class="img-responsive img-banner" src="img/{{ site.header.image }}" alt="Ling Qian Banner Image">
                     <div class="quote">
-                        I strive for two things in design: simplicity and clarity.
-                        <span class="author">Lindon Leader</span>
+                        {{ site.header.quote }}
+                        <span class="author">{{ site.header.author }}</span>
                     </div>
                 </div>
                 <div class="intro-text">
