--- a/_includes/vision.html
+++ b/_includes/vision.html
@@ -9,11 +9,11 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>My goal is to become an excellent Instructional Technology Consultant in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching.</p>
+                My goal is to become an excellent Instructional Technology Consultant in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching.
             </div>
             <div class="col-lg-4">
-                <p>I have extensive knowledge and eight years of experiences about Instructional Design, adult learning, and cutting-edge learning technologies. Please feel free to contact me if you have any questions about my portfolio.</p>
-         </div>
+                I have extensive knowledge and eight years of experiences about Instructional Design, adult learning, and cutting-edge learning technologies. Please feel free to contact me if you have any questions about my portfolio.
+            </div>
         </div>
     </div>
 </section>
