--- a/_includes/vision.html
+++ b/_includes/vision.html
@@ -9,10 +9,10 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                My goal is to become an excellent Instructional Technology Consultant in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching.
+                <p>My goal is to become an excellent Instructional Technology Consultant in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching.</p>
             </div>
             <div class="col-lg-4">
-                I have extensive knowledge and eight years of experiences about Instructional Design, adult learning, and cutting-edge learning technologies. Please feel free to contact me if you have any questions about my portfolio.
+                <p>I have extensive knowledge and eight years of experiences about Instructional Design, adult learning, and cutting-edge learning technologies. Please feel free to contact me if you have any questions about my portfolio.</p>
             </div>
         </div>
     </div>
