--- a/_includes/vision.html
+++ b/_includes/vision.html
@@ -9,10 +9,10 @@
         </div>
         <div class="row">
             <div class="col-md-5 col-md-offset-1">
-                <p>My vision is to be an excellent Instructional Technology Consultant in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching and fulfill their missions in education.</p>
+                <p>My goal is to become an Instructional Designer in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching and fulfill their missions in education.</p>
             </div>
             <div class="col-md-5">
-                <p>I have extensive knowledge and eight years of experiences about Instructional Design, adult learning, and cutting-edge learning technologies. Using my professional knowledge and service helping people to enjoy the technology at work.</p>
+                <p>I have extensive knowledge and eight years of experiences about Instructional Design, adult learning, and cutting-edge learning technologies. I would Use my professional knowledge to help people to enjoy technology at work.</p>
             </div>
         </div>
     </div>
