--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -195,64 +195,6 @@ section.success {
     }
 }
 
-#projects .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
-}
-
-#projects .portfolio-item .portfolio-link {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    max-width: 400px;
-}
-
-#projects .portfolio-item .portfolio-link .caption {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background: rgba({{ site.color.primary-rgb }},.9);
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    transition: all ease .5s;
-}
-
-#projects .portfolio-item .portfolio-link .caption:hover {
-    opacity: 1;
-}
-
-#projects .portfolio-item .portfolio-link .caption .caption-content {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 20px;
-    /*margin-top: -12px;*/
-    transform: translate(0, -50%);
-    text-align: center;
-    font-size: 20px;
-    color: #fff;
-}
-
-#projects .portfolio-item .portfolio-link .caption .caption-content i {
-    /*margin-top: -12px;*/
-}
-
-#projects .portfolio-item .portfolio-link .caption .caption-content h3,
-#projects .portfolio-item .portfolio-link .caption .caption-content h4 {
-    margin: 0;
-}
-
-#projects * {
-    z-index: 2;
-}
-
-@media(min-width:767px) {
-    #projects .portfolio-item {
-        margin: 0 0 30px;
-    }
-}
-
 .btn-outline {
     margin-top: 15px;
     border: solid 2px #fff;
@@ -387,65 +329,6 @@ footer .footer-below {
     outline: 0;
 }
 
-.portfolio-modal .modal-content {
-    padding: 100px 0;
-    min-height: 100%;
-    border: 0;
-    border-radius: 0;
-    text-align: center;
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.portfolio-modal .modal-content h2 {
-    margin: 0;
-    font-size: 3em;
-}
-
-.portfolio-modal .modal-content img {
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .modal-content .item-details {
-    margin: 30px 0;
-}
-
-.portfolio-modal .close-modal {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.portfolio-modal .close-modal:hover {
-    opacity: .3;
-}
-
-.portfolio-modal .close-modal .lr {
-    z-index: 1051;
-    width: 1px;
-    height: 75px;
-    margin-left: 35px;
-    background-color: #{{ site.color.secondary }};
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
-    width: 1px;
-    height: 75px;
-    background-color: #{{ site.color.secondary }};
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-
 /*.navbar-nav>.active>a {
     background-color: #{{ site.color.secondary-dark }} !important;
 }*/
@@ -508,16 +391,6 @@ nav > .container, footer .container, section .container {
     padding-right: 15px;
 }
     
-/* portfolio */
-.portfolio-item {
-    max-height: 260px;
-    overflow: hidden;
-}
-
-.portfolio-link {
-    max-height: 260px;
-}
-
 /* documents */
 #documents button {
     display: block;
@@ -530,11 +403,6 @@ nav > .container, footer .container, section .container {
     border: 1px solid black;
 }
 
-.modal-body embed {
-    width: 100%;
-    min-height: 850px;
-}
-
 /* misc */
 section:nth-child(even) {
     background-color: #{{ site.color.primary }};
@@ -545,7 +413,34 @@ hr.star-light, hr.star-primary {
     margin: 15px auto 30px;
 }
 
+.nopadding{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
 /* projects */
-.caption-content .fa {
-    display: block;
+.project-caption{
+    padding: 15px;
+}
+
+
+@media only screen and (min-width : 768px) {
+    .is-table {
+        display: table;
+        border-collapse: collapse;
+    }
+    .is-table [class*="col-"] {
+        float: none;
+        display: table-cell;
+        vertical-align: top;
+    }
+}
+
+.portfolio-item{
+    background-color: #F7F7F7;
+    border: 1px solid #DDD;
+}
+
+.project-caption p:not(:last-of-type){
+    border-bottom: 1px solid #DDD;
 }
