--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>I worked as an instructional designer and a faculty member in higher education for the past ten years. After pursuing my seconde Master's degree in Instructional Systems Technology at Indiana University Bloomington, I will set sail again in the higher education ocean. I am also a mom of two wonderful daughters, and a woman who loves the world and the life. Please feel free to contact me if you have any questions about my portfolio.</p>
+                <p>I worked as an instructional designer and a faculty member in higher education for the past ten years. After pursuing my second master's degree in Instructional Systems Technology at Indiana University Bloomington, I will set sail again in the higher education ocean. I am also a mom of two wonderful daughters and a woman who loves the world and the life. Please feel free to contact me if you have any questions about my portfolio.</p>
             </div>
             <div class="col-lg-4">
                 <p></p>
