--- a/_includes/documents.html
+++ b/_includes/documents.html
@@ -1,10 +1,9 @@
 <!-- Documents Section -->
-<section id="documents">
-    <h1>{{ page.test }}</h1>
+<section id="resume">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Documents</h2>
+                <h2>Resume</h2>
                 <hr class="star-primary">
             </div>
         </div>
