--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
                         <a href="#vision">Vision</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#documents">Documents</a>
+                        <a href="#resume">Resume</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
