--- a/_includes/vision.html
+++ b/_includes/vision.html
@@ -12,7 +12,7 @@
                 <p>My goal is to become an Instructional Designer in higher education, designing and developing online/hybrid courses and helping instructors reach their potential in teaching and fulfill their missions in education.</p>
             </div>
             <div class="col-md-5">
-                <p>I have extensive knowledge and eight years of experience in Instructional Design, adult learning, and cutting-edge learning technologies. I would like to use my professional knowledge to help people enjoy using technology.</p>
+                <p>I have extensive knowledge and eight years of experience in Instructional Design, adult learning, and cutting-edge learning technologies. I would like to use my professional knowledge to help faculty improve their teaching through technology.</p>
             </div>
         </div>
     </div>
