--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -19,7 +19,7 @@
                         <img src="/img/projects/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
                     </a>
                     <div class="project-caption">
-                        <p>Date: {{ post.date | date: "%m/%d/%Y" }}</p>
+                        <p>Date: {{ post.date | date: "%b %Y" }}</p>
                         <p>Client: {{ post.client }}</p>
                         <p>{{ post.content | remove: '<p>' | remove: '</p>' }}</p>
                     </div>
