--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -19,7 +19,7 @@
                         <img src="/img/projects/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
                     </a>
                     <div class="project-caption">
-                        <p>Name: {{ post.name }}</p>
+                        <h4 style="text-align: center;">{{ post.name }}</h4>
                         <p>Date: {{ post.date | date: "%b %Y" }}</p>
                         <p>Tools: {{ post.tools }} </p>
                         <p>Client: {{ post.client }}</p>
