--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>I worked as an instructional designer and a faculty member in higher education for the past eight years. After pursuing my second master's degree in Instructional Systems Technology at Indiana University Bloomington, I will set sail again in the higher education ocean. Please feel free to contact me if you have any questions about my portfolio.</p>
+                <p>I worked as an instructional designer and a faculty member in higher education in the past eight years. After pursuing my second master's degree in Instructional Systems Technology at Indiana University Bloomington, I will continue to work in higher education. Please feel free to contact me if you have any questions about my portfolio.</p>
             </div>
             <div class="col-lg-4">
                 <p></p>
