--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -27,6 +27,7 @@
                                 <p>Date: {{ post.date | date: "%b %Y" }}</p>
                                 <p>Tools: {{ post.tools }} </p>
                                 <p>Client: {{ post.client }}</p>
+                                <p>Skills: {{ post.skills }}</p>
                                 <p>{{ post.content | remove: '<p>' | remove: '</p>' }}</p>
                             </div>
                         </div>
