--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -25,9 +25,9 @@
                             <div class="col-md-6 project-caption">
                                 <h3>{{ post.name }}</h3>
                                 <p>Date: {{ post.date | date: "%b %Y" }}</p>
-                                <p>Tools: {{ post.tools }} </p>
-                                <p>Client: {{ post.client }}</p>
+                                <p>Client: {{ post.Client }} </p>
                                 <p>Skills: {{ post.skills }}</p>
+                                <p>Team Composition: {{ post.team composition }}</p>
                                 <p>{{ post.content | remove: '<p>' | remove: '</p>' }}</p>
                             </div>
                         </div>
