--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -27,7 +27,7 @@
                                 <p>Date: {{ post.date | date: "%b %Y" }}</p>
                                 <p>Client: {{ post.Client }} </p>
                                 <p>Skills: {{ post.skills }}</p>
-                                <p>Team Composition: {{ post.team_composition }}</p>
+                                <p>Team Composition: {{ post.Team Composition }}</p>
                                 <p>{{ post.content | remove: '<p>' | remove: '</p>' }}</p>
                             </div>
                         </div>
