--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -28,6 +28,7 @@
                                 <p>Client: {{ post.Client }} </p>
                                 <p>Skills: {{ post.skills }}</p>
                                 <p>Team: {{ post.Team }}</p>
+                                <p>Involvement: {{ post.Involvement}}</p>
                                 <p>{{ post.content | remove: '<p>' | remove: '</p>' }}</p>
                             </div>
                         </div>
